--- a/src/styles/NavBar.module.css
+++ b/src/styles/NavBar.module.css
@@ -1,6 +1,6 @@
 /* Navbar container */
 .navbar {
-    background-color: #1e3a8a; /* Dark blue background */
+    background-color: #1e3a8a;
     padding: 0.8rem 2rem;
     box-shadow: 0 2px 10px rgba(0, 0, 0, 0.2);
   }
@@ -59,8 +59,8 @@
 
 /* Font Awesome icon color */
   .navbar-toggler i {
-  font-size: 1.5rem; /* Adjust icon size */
-  color: white; /* Set icon color to white */
+  font-size: 1.5rem;
+  color: white;
   }
 
   
@@ -71,7 +71,7 @@
     }
     
     .navLinksContainer {
-      background-color: #1a3168; /* Slightly darker blue for mobile menu */
+      background-color: #1a3168;
       padding: 1rem;
       margin-top: 1rem;
       border-radius: 8px;
