--- a/src/styles/AllCars.module.css
+++ b/src/styles/AllCars.module.css
@@ -37,7 +37,7 @@
 /* ===== CAR LIST ===== */
 .carsList {
   display: grid;
-  grid-template-columns: repeat(3, 1fr); /* 3 columns */
+  grid-template-columns: repeat(3, 1fr);
   gap: 2rem;
   padding: 1rem;
   max-width: 1200px;
