--- a/src/styles/BookedDates.module.css
+++ b/src/styles/BookedDates.module.css
@@ -108,7 +108,7 @@
   transform: scale(1.05);
 }
 
-.cancelButton {
+.cancelButton, .editButton{
   background: #e74c3c;
   color: white;
   margin-bottom: 40px;
@@ -122,7 +122,15 @@
   white-space: nowrap;
 }
 
-.cancelButton:hover {
+.bookingActions {
+  display: flex;
+  flex-direction: column;
+  gap: 10px;
+  margin-left: 1rem;
+  min-width: 120px;
+}
+
+.cancelButton:hover, .editButton:hover  {
   background: #c0392b;
 }
 
