--- a/src/index.css
+++ b/src/index.css
@@ -46,3 +46,18 @@ code {
   90% { opacity: 1; transform: translate(-50%, -50%); }
   100% { opacity: 0; transform: translate(-50%, -40px); }
 }
+
+/* Font Awesome Validator Fixes */
+.fa-beat,
+.fa-bounce,
+.fa-beat-fade,
+.fa-fade,
+.fa-flip,
+.fa-shake,
+.fa-spin {
+  --fa-animation-delay: 0s !important;
+}
+
+.fa-rotate-by {
+  --fa-rotate-angle: 0deg !important;
+}
