--- a/src/styles/AboutUs.module.css
+++ b/src/styles/AboutUs.module.css
@@ -52,17 +52,15 @@
     padding: 20px;
     text-align: center;
     box-shadow: 0 4px 15px rgba(0, 0, 0, 0.1);
-    transition: transform 0.3s, box-shadow 0.3s;
 }
 
 .achievement:hover {
-    transform: translateY(-5px);
     box-shadow: 0 8px 20px rgba(0, 0, 0, 0.2);
 }
 
 .achievement h3 {
     font-size: 24px;
-    color: #007BFF; /* Change the color for better emphasis */
+    color: #007BFF;
     margin-bottom: 10px;
 }
 
